# Game-CPP

./: .gitignore  CMakeLists.txt  README.md  license  readme.md
assets/: graphic.ase
assets/Textures/: graphic.ase
src/: main.cpp
src/core/: game.cpp  game.h  game.hpp
src/core/animations/: animations.cpp  animations.hpp
src/core/debug/: debug.hpp  logger.hpp
src/core/resources/: resources.cpp  resources.hpp
src/core/tilemap/: tilemap.cpp
src/economy/: economy.cpp  economy.h  economy.hpp
src/entities/: entity-manager.cpp  entity-manager.h  entity-manager.hpp  entity.cpp  entity.hpp  player.cpp  player.h  player.hpp
src/systems/animations/: animations.cpp  animations.h
src/systems/audio/: audio.hpp
src/systems/collisions/: collisions.cpp  collisions.hpp
src/systems/tilemap/: tilemap.cpp  tilemap.h  tilemap.hpp
src/systems/ui/: ui.cpp  ui.h  ui.hpp
src/ui/: ui-manager.hpp  ui.cpp  ui.h  ui.hpp
src/ui/core/: gui.cpp  gui.hpp  ui.cpp  ui.hpp
src/ui/core/elements/: button.cpp  button.hpp  label.cpp  label.hpp  ui-element.hpp
src/ui/gui/: gui.cpp  gui.hpp
src/ui/gui/elements/: label.cpp  label.hpp
src/ui/screens/: hud.cpp  hud.hpp
